--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,8 @@
   "private": true,
   "dependencies": {
     "jquery": "~1.11.1",
-    "modernizr": "~2.8.2"
+    "modernizr": "~2.8.2",
+    "normalize-scss": "~3.0.2",
+    "fotorama": "~4.6.2"
   }
 }
